--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+h<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Type Ahead 👀</title>
+  <title>French city searcher</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="cb-favicon.ico" />
 </head>
